@@ -883,6 +883,19 @@ attribute_def svr_attr_def[] = {
         PARENT_TYPE_SERVER
     },
 
+/* SRV_ATR_SchedVersion */
+    {   ATTR_schedversion,     /* "sched_version" */
+        decode_str,
+        encode_str,
+        set_str,
+        comp_str,
+        free_str,
+        NULL_FUNC,
+        MGR_ONLY_SET,
+        ATR_TYPE_STR,
+        PARENT_TYPE_SERVER
+    },
+
 
 /* site supplied server attribute definitions if any, see site_svr_attr_*.h  */
 #include "site_svr_attr_def.h"
